[gd_scene load_steps=10 format=3 uid="uid://bxog5iq8771kh"]

[ext_resource type="Theme" uid="uid://cmd714lbb53ja" path="res://assets/resources/themes/ui_theme.tres" id="1_iee3r"]
[ext_resource type="PackedScene" uid="uid://c63b0ewnfkf4n" path="res://assets/scenes/ui/mapOverview/map/map.tscn" id="1_lplem"]
[ext_resource type="Script" uid="uid://cxxrx1vnyb7mf" path="res://assets/scenes/ui/mapOverview/map_screen.gd" id="1_r48cj"]

[sub_resource type="Gradient" id="Gradient_jqm1r"]
offsets = PackedFloat32Array(0, 0.0714286, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.439216, 0, 0, 1, 0.556863, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_n3oiv"]
gradient = SubResource("Gradient_jqm1r")

[sub_resource type="LabelSettings" id="LabelSettings_kc4o1"]
font_size = 66
shadow_size = 7
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_206y2"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("topBar:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.183013, 1),
"update": 0,
"values": [Vector2(0, 71), Vector2(790, 71)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("topBar/label:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.29, 0.8),
"transitions": PackedFloat32Array(0.0824697, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_udaj1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("topBar:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(790, 71)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("topBar/label:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_avv0b"]
_data = {
&"RESET": SubResource("Animation_udaj1"),
&"open": SubResource("Animation_206y2")
}

[node name="mapScreen" type="Control" node_paths=PackedStringArray("map")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_iee3r")
script = ExtResource("1_r48cj")
map = NodePath("subViewportContainer/subViewport/map")

[node name="subViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="subViewport" type="SubViewport" parent="subViewportContainer"]
handle_input_locally = false
msaa_3d = 2
screen_space_aa = 1
size = Vector2i(1600, 900)
render_target_update_mode = 4

[node name="map" parent="subViewportContainer/subViewport" instance=ExtResource("1_lplem")]

[node name="topBar" type="MarginContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_right = 0.494
anchor_bottom = 0.079
offset_right = -0.400024
offset_bottom = -0.100006

[node name="textureRect" type="TextureRect" parent="topBar"]
layout_mode = 2
texture = SubResource("GradientTexture1D_n3oiv")
expand_mode = 1

[node name="label" type="Label" parent="topBar"]
layout_mode = 2
text = "World Map"
label_settings = SubResource("LabelSettings_kc4o1")

[node name="topBarAnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_avv0b")
}

[node name="forward" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -214.0
offset_bottom = 223.0
grow_horizontal = 0
grow_vertical = 2
text = ">"

[node name="backward" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -218.5
offset_right = 151.0
offset_bottom = 218.5
grow_vertical = 2
text = "<"

[connection signal="pressed" from="forward" to="." method="addIndex"]
[connection signal="pressed" from="backward" to="." method="subtractIndex"]
